<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit_24"
        android:enabled="false"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_action_delete_24"
        android:enabled="false"
        android:visible="true"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_new_item"
        android:title="@string/action_new_item"
        android:visible="true"
        app:showAsAction="never"/>

    <item android:id="@+id/action_notify"
        android:title="@string/action_notify"
        android:icon="@drawable/ic_action_notifications_24"
        android:visible="true"
        app:showAsAction="never"/>

</menu>

